<resources>
    <string name="app_name">Panther Hour</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_nonexist_email">This email address does not exist</string>
    <string name="error_email_exists">This email address is already in the system</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Register</string>
    <string name="c_pantherapps_com">(C) PantherApps.com</string>
    <string name="login">Login</string>
    <string name="new_to_panther_hour_register_here">New to Panther Hour? Register here</string>
    <string name="register">Register</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="title_activity_teacher_main">TeacherMainActivity</string>
    <string name="title_activity_student_main">Student View</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_scheduler">Scheduler</string>
    <string name="title_activity_teacher">TeacherActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_admin">Admin View</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tap_on_a_student_to_toggle">Tap on a student to toggle status</string>
    <string name="change_room_string_action_settings">Change activity settings and information</string>
    <string name="real_time_room_android_string_status_bar_notification_info_overflow">Real time list of room status</string>


    <!--Strings for interface-->

</resources>
